logo file name and title  changed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					Menu
 				</button>
 				<a href="#" class="ba-logo">
-					<img src="img/luara.png" alt="logo">
+					<img src="img/luaralogo.png" alt="logo">
 				</a>
 			</div>
 
